--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "zy_log"
-version = "0.1.0" # 版本升级
+version = "0.1.1" # 版本升级
 authors = [
   { name="zy", email="zhoumuci77@gamil.com" },
 ]
@@ -26,3 +26,6 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/yaosterm/zy_log"
 "Bug Tracker" = "https://github.com/yaosterm/zy_log/issues"
+
+[tool.setuptools.package-data]
+zy_log = ["config/default_config.json"]
